[gd_scene load_steps=4 format=2]

[ext_resource path="res://Resources/Fonts/Epilepsy Sans/Resource/EpilepsySans.tres" type="DynamicFont" id=1]
[ext_resource path="res://TextBoxPopup.gd" type="Script" id=2]
[ext_resource path="res://Resources/Themes/MainTheme.tres" type="Theme" id=3]

[node name="TextBoxPopup" type="Node2D"]
position = Vector2( 272, 169 )
script = ExtResource( 2 )
text = "Здесь скрыта память о
прекрасных временах"

[node name="MarginNode" type="Node2D" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="MarginNode"]
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MarginNode/PanelContainer"]
margin_left = 4.5048
margin_top = 4.37967
margin_right = 14.5048
margin_bottom = 27.3797
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="Label" type="Label" parent="MarginNode/PanelContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 5.0
margin_bottom = 18.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 1 )

[node name="TextTween" type="Tween" parent="."]

[node name="AppearanceTween" type="Tween" parent="."]
